[package]
name = "VR_MarketPlace_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-macros = "0.8"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
